tests/paczka1/fuzzy1/80404290.err
Error in line 23: KraiLqm1rZC S355 4,9
Error in line 28: LPYctXtZhd6 A110 47,2
Error in line 31: KraiLqm1rZC A110 100,0
